Closed
Bug 1481244
Opened 7 years ago
Closed 6 years ago
Crash in <name omitted> | mozilla::AudioStream::SetVolume
Categories
(Core :: Audio/Video: cubeb, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla67
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox61 | --- | unaffected |
firefox62 | --- | wontfix |
firefox63 | --- | wontfix |
firefox64 | --- | wontfix |
firefox65 | --- | wontfix |
firefox66 | --- | fixed |
firefox67 | --- | fixed |
People
(Reporter: marcia, Assigned: achronop)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
47 bytes,
text/x-phabricator-request
|
Details | Review | |
1.03 KB,
patch
|
jya
:
review+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-e5940041-858e-40d4-a3b1-d2fc60180804.
=============================================================
Seen while looking at crash stats - several of these crashes spotted in the latest 10.14 seed: https://bit.ly/2M4vLbd. There is also a set which affects 62: https://bit.ly/2vHxskS
The crash reason for all crashes in these 2 signatures is EXC_SOFTWARE / SIGABRT.
Top 10 frames of crashing thread:
0 @0x7fff57f48a86
1 XUL google_breakpad::ReceivePort::WaitForMessage toolkit/crashreporter/google-breakpad/src/common/mac/MachIPC.mm:249
2 XUL google_breakpad::CrashGenerationClient::RequestDumpForException toolkit/crashreporter/breakpad-client/mac/crash_generation/crash_generation_client.cc:67
3 XUL google_breakpad::ExceptionHandler::WriteMinidumpWithException toolkit/crashreporter/breakpad-client/mac/handler/exception_handler.cc:375
4 XUL google_breakpad::ExceptionHandler::SignalHandler toolkit/crashreporter/breakpad-client/mac/handler/exception_handler.cc:621
5 @0x7fff57fe4d79
6 @0x1196088c7
7 @0x7fff57ea51c8
8 @0x7fff57e6d867
9 XUL <name omitted> media/libcubeb/src/cubeb_audiounit.cpp:2868
=============================================================
Updated•7 years ago
|
Rank: 15
Priority: -- → P2
Comment 1•7 years ago
|
||
This is crashing on OSX because `stm->output_unit` is `nullptr`.
Updated•7 years ago
|
Comment 2•7 years ago
|
||
fairly low volume & devedition/nightly users are hit most commonly by this.
Comment 3•7 years ago
|
||
No crash on 63, a handful of crashes on 64 beta and 65 nightly.
Updated•6 years ago
|
status-firefox66:
--- → affected
Comment 4•6 years ago
|
||
Low volume crash, has a priority set.
Marking fix-optional to remove this from regression triage.
Happy to still take a patch in nightly.
Reporter | ||
Updated•6 years ago
|
status-firefox67:
--- → affected
Updated•6 years ago
|
Crash Signature: [@ <name omitted> | mozilla::AudioStream::SetVolume] → [@ <name omitted> | mozilla::AudioStream::SetVolume]
[@ mozilla::AudioStream::SetVolume]
Assignee | ||
Comment 6•6 years ago
|
||
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → achronop
Pushed by achronopoulos@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ece70ee50ed6
When a stream is errored avoid updating the volume. r=jya
Comment 8•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Comment 9•6 years ago
|
||
Is this something we should consider for Beta backport or can it ride the trains?
status-firefox-esr60:
--- → unaffected
Flags: needinfo?(achronop)
Assignee | ||
Comment 10•6 years ago
|
||
Yeah, that's something I would like to uplift and it is fairly small and uplift-able.
Flags: needinfo?(achronop)
Assignee | ||
Comment 11•6 years ago
|
||
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: None
- User impact if declined: A crash when an audio stream fails.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's a small fix that prevents volume changes on a failed stream.
- String changes made/needed:
Attachment #9046307 -
Flags: review?(jyavenard)
Attachment #9046307 -
Flags: approval-mozilla-beta?
Updated•6 years ago
|
Attachment #9046307 -
Flags: review?(jyavenard) → review+
Comment 12•6 years ago
|
||
Comment on attachment 9046307 [details] [diff] [review]
bug-1481244-beta-uplift.patch
Avoids a potential crash, low risk, OK for beta 12 uplift.
Attachment #9046307 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•6 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•