Bug 1481244 - Don't update the volume when stream is errored. r=jya a=lizzard

--HG--
extra : rebase_source : d47d89d035c5428e3ba4ac153acb228aef19d54e