dom/media/AudioStream.cpp
@@ -397,12 +397,13 @@ nsresult AudioStream::OpenCubeb(cubeb* aContext, cubeb_stream_params& aParams,
 void AudioStream::SetVolume(double aVolume) {
   MOZ_ASSERT(aVolume >= 0.0 && aVolume <= 1.0, "Invalid volume");
 
-#ifdef DEBUG
   {
     MonitorAutoLock mon(mMonitor);
     MOZ_ASSERT(mState != SHUTDOWN, "Don't set volume after shutdown.");
+    if (mState == ERRORED) {
+      return;
+    }
   }
-#endif
 
   if (cubeb_stream_set_volume(mCubebStream.get(),
                               aVolume * CubebUtils::GetVolumeScale()) !=
